[package]
authors = [
   "Jonathan Pallant <jonathan.pallant@42technology.com>",
]
categories = ["embedded", "no-std"]
description = "BSP for the nRF9160-DK"
keywords = ["arm", "nrf9160"]
license = "MIT OR Apache-2.0"
readme = "README.md"
name = "nrf9160-dk-bsp"
version = "0.1.0"
edition = "2018"

[dependencies]
nrf9160-hal = "0.10.0"

[dev-dependencies]
cortex-m-rt = "0.6.12"
nb = "0.1.2"
panic-semihosting = "0.5.3"
