[package]
authors = [
   "Jonathan Pallant <jonathan.pallant@42technology.com>",
]
categories = ["embedded", "no-std"]
description = "BSP for the nRF9160-DK"
keywords = ["arm", "nrf9160"]
license = "MIT OR Apache-2.0"
readme = "README.md"
name = "nrf9160-dk-bsp"
version = "0.1.0"
edition = "2018"
resolver = "2"

[dependencies]
nrf9160-hal = { git = "https://github.com/nrf-rs/nrf-hal" }

[dev-dependencies]
cortex-m-rt = "0.6"
cortex-m = "0.7"
nb = "0.1.2"
nrfxlib = { git = "https://github.com/42-technology-ltd/nrfxlib.git", branch="support_151" }
tinyrlibc = "*"
spin = "0.9"
